# SysPulse

./: .gitignore  README.md  build.ps1  index.html  package-lock.json  package.json  run-dev-admin.py  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
hw-helper/: ComputerHost.cs  FanControl.cs  HwHelper.csproj  HwSnapshot.cs  Program.cs  Protocol.cs  Snapshot.cs  WmiCache.cs
overlay/: index.html  overlay.css  overlay.ts
overlay-tooltip/: index.html  tooltip.css  tooltip.ts
scripts/: build-helper.ps1  ensure-helper.ps1
src/: App.tsx  bindings.ts  ipc.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: app.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  sampler.rs  tray.rs
src-tauri/src/config/: manager.rs  mod.rs  normalize.rs  schema.rs
src-tauri/src/hw/: admin.rs  client.rs  fan_control.rs  mod.rs  protocol.rs  sampler.rs  snapshot.rs
src-tauri/src/ipc/: events.rs
src-tauri/src/ipc/commands/: autostart_cmd.rs  cleanup_cmd.rs  config_cmd.rs  history_cmd.rs  hw_cmd.rs  mod.rs  stats_cmd.rs  system_cmd.rs  window_cmd.rs
src-tauri/src/monitor/: cpu.rs  memory.rs  mod.rs  network.rs  registry.rs  snapshot.rs
src-tauri/src/storage/: mod.rs  queries.rs  store.rs  writer.rs
src-tauri/src/storage/migrations/: mod.rs  v0_to_v1.rs
src-tauri/src/windows_api/: if_table.rs  internal_windows.rs  mod.rs  taskbar.rs
src/components/: UpdateNotesModal.tsx
src/i18n/: en-US.json  index.ts  zh-CN.json
src/routes/: AboutPage.tsx  CleanupPage.tsx  DashboardPage.tsx  GeneralPage.tsx  HardwarePage.tsx  HistoryPage.tsx  OverlayPage.tsx  registry.tsx
src/stores/: autostartStore.ts  configStore.ts  hwStore.ts  liveStore.ts  updateStore.ts
src/styles/: global.css
src/utils/: bindOnce.ts  format.ts  overlayItems.ts  (+1 more)
(+11 files in other folders)
