[package]
name = "syspulse"
version = "0.1.0"
description = "Lightweight Windows network/system monitor"
authors = ["SysPulse"]
edition = "2021"
rust-version = "1.78"
default-run = "syspulse"

[lib]
name = "syspulse_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
embed-manifest = "1.4"

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-single-instance = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-updater = "2.0"

tokio = { version = "1", features = ["full"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1"
toml = "0.8"

sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }

rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

dirs = "5"
parking_lot = "0.12"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

specta = { version = "2.0.0-rc.22", features = ["serde_json"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[features]
default = []
# Used when bundling so Tauri serves frontend over the asset:// protocol.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
